no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -58,6 +58,7 @@ npm                                             #Node packet manager (see doc)
 
 
 clear|setTimeout|Interval(...)                  #Like DOM ones (see DOM doc), but extra members
+                                                #Unlike DOM, error if INT > 2 ** 31 - 1 (25 days)
 clear|setImmediate(...)                         #
 ID.[un]ref()->ID                                #Yield the macrotask (see JavaScript doc)
 ID.hasRef()->BOOL                            11*#
