no commit message

--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -39,7 +39,7 @@ ALTERNATIVES ==>                  #  - esprima:
                                   #  - cherow: not maintained
                                   #  - esprit: not maintained
 
-VERSION ==>                       #7.1.1 (acorn), 6.1.0 (acorn-loose), 6.2.0 (acorn-walker)
+VERSION ==>                       #7.2.0 (acorn), 6.1.0 (acorn-loose), 6.2.0 (acorn-walker)
                                   #Browser, Node.js or CLI
                                   #JavaScript parser and tokenizer
 
@@ -185,8 +185,8 @@ PARSER.acorn                      #ACORN
 PARSER.extend(PLUGIN...)          #
 
 ACORN-STAGE3                     ##PLUGIN bundling the following PLUGINs: bigint, class-fields, private-class-*,
-                                 ##static-class-features, dynamic-import, import-meta
-                                 ##Version 2.0.0
+                                 ##static-class-features, dynamic-import, import-meta, numeric-separator, logical-assignment
+                                 ##Version 2.1.0
 
 ACORN-BIGINT                     ##PLUGIN for BIGINT
                                  ##Version 0.4.0
@@ -206,11 +206,11 @@ ACORN-DYNAMIC-IMPORT             ##PLUGIN for import()
                                  ##Different syntax than ESTree: type 'Import'
                                  ##Version 4.0.0
 
-ACORN-IMPORT-META                ##PLUGIN for import.meta
-                                 ##Version 1.1.0
-
 ACORN-NUMERIC-SEPARATOR          ##PLUGIN for NUM_NUM_NUM
-                                 ##Version 0.3.0
+                                 ##Version 0.3.2
+
+ACORN-LOGICAL-ASSIGNMENT         ##PLUGIN for ||= &&= ??=
+                                 ##Version 0.1.0
 
 ACORN-JSX()                      ##PLUGIN for JSX (see JSX AST doc)
                                  ##New token types: jsxName, jsxText, jsxTagStart, jsxTagEnd
