no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -525,9 +525,9 @@ import ... from "MDL"             #Child of MODULE_DECLARATION, type 'ImportDecl
                                   #  - specifiers MODULE_SPECIFIER_ARR
                                   #  - source LITERAL ("MDL")
                               (b)##  - importKind 'type|typeof|value'|null
-  as { VAR: STR, ... }        (b)##  - [attributes IMPORT_ATTRIBUTE_ARR (type 'ImportAttribute')]
-                              (b)##     - key IDENTIFIER
-                              (b)##     - value STR
+  with VAR: STR, ...          (b)*#  - [attributes IMPORT_ATTRIBUTE_ARR (type 'ImportAttribute')]
+                              (b)*#     - key IDENTIFIER
+                              (b)*#     - value STR
 import { VAR|default [as VAR2] }  #Child of MODULE_SPECIFIER, type 'ImportSpecifier':
                                   #  - imported IDENTIFIER (VAR)
                                   #  - local IDENTIFIER (VAR2, same as VAR by def)
@@ -540,4 +540,5 @@ import {}                         #Those have empty ARR as specifiers
 
 import("MDL")                 stbl#Child of EXPR, type 'ImportExpression':
                               stbl#  - source EXPR
+import("MDL", OPTS)           (b)*#  - [attributes EXPRESSION]
                             (tbl)##Treated as a CALL_EXPRESSION
