no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #14.1.0 (current), 13.14.0 (current), 12.16.3 (active LTS), 10.20.1 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #14.2.0 (current), 13.14.0 (current), 12.16.3 (active LTS), 10.20.1 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -2811,6 +2811,7 @@ new Worker(SCRIPT[, OPTS])                      #SCRIPT is 'PATH'
                                              12*#        - maxOldGenerationSizeMb NUM: main heap max size
                                              12*#        - maxYoungGenerationSizeMb NUM: recently created objects heap max size
                                              12*#        - codeRangeSizeMb NUM: code max size
+                                             14*#        - stackSizeMb NUM (def: 4): stack max size
 
 global.*                                        #In worker, like in parent except process.*:
                                                 #  - exit() affects current thread not current process
@@ -3251,6 +3252,13 @@ ASSERT.rejects|doesNotReject                    #PROMISE rejection
                                                 #Fails if not using a PROMISE[()]
                                                 #PROMISE2 is resolved if test passed
 
+new CallTracker()                            14*#Asserts number of times a FUNC was called.
+CALLTRACKER.calls([FUNC][, NUM])->FUNC2      14*#FUNC2 is wrapper around FUNC
+                                             14*#Def FUNC: noop
+                                             14*#Def NUM: 1
+CALLTRACKER.report()->ASSERTIONERROR_ARR     14*#Empty array if none
+CALLTRACKER.verify()                         14*#Throw all ASSERTIONERROR_ARR aggregated as one
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -3275,6 +3283,7 @@ new Console(OSTREAM[, OSTREAM2][, BOOL])        #OPTS:
                                                 #  - ignoreErrors BOOL (def: true): ignore errors on OSTREAM[2]
                                                 #  - colorMode BOOL or 'auto' (def: OSTREAM.isTTY && OSTREAM.hasColors())
                                              11*#  - inspectOptions OPTS: passed to UTIL.inspect()
+                                             14*#  - groupIndentation NUM (def: 2): when using console.group*()
 
 STDERR ==>                                      #Uses by:
                                                 #  - CONSOLE.warn|error() (not other CONSOLE.*)
@@ -3489,7 +3498,7 @@ types.isGeneratorFunction(VAL)->BOOL            #True if FUNC *
 types.isGeneratorObject(VAL)->BOOL              #True if return value of FUNC * (not just any ITERABLETOR)
 types.isMap|SetIterator(VAL)->BOOL              #True if MAP|SET.keys|values|entries|Symbol.iterator()
 
-types.is[Shared|Any]ArrayBuffer|DataView|
+types.is[Shared|Any]ArrayBuffer[View]|DataView|
  TypedArray|[Big]Int|Uint|Float*Array(VAL)
  ->BOOL                                         #True if [SHARED]ARRAYBUFFER|DATAVIEW|TYPED_ARR|UINT|INT|FLOAT*ARRAY
 
