no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2104,12 +2104,17 @@ DIRENT.isFile|Directory|Block|CharacterDevice|
  FIFO|Socket|SymbolicLink()->BOOL               #
 DIRENT.name                                     #STR
 
-opendir(DIR[, OPTS], FUNC(ERROR, FSDIR))     12*#Like readdir() but iteratively. Unordered.
+opendir(DIR[, OPTS], FUNC(ERROR, FSDIR))     12*#Like readdir() but:
+                                             12*#  - iteratively, in batch of OPTS.bufferSize NUM (def: 32) files internally
+                                             12*#     - i.e. slower but lower memory
+                                             12*#        - on my machine: 1s per 1e6 files, in big directories
+                                             12*#        - on my machine: 4x|5x for <1e5 files files, 2x for 1e5 files, 1x for 1e6 files, slightly faster above
+                                             12*#     - higher OPTS.bufferSize makes it faster up until a point where it makes it slower
+                                             12*#        - on my machine: fastest seem to be 256
+                                             12*#  - only useful for very big directories (>1e6 files)
+                                             12*#  - unordered
                                              12*#OPTS:
                                              12*#  - encoding 'ENCODING'
-                                             12*#  - bufferSize NUM (def: 32):
-                                             12*#     - number of directories in a batch (internally)
-                                             12*#     - higher value gives better performance but requires more memory
 FSDIR.path                                   12*#'DIR' (as specified in input)
 FSDIR.read()->PROMISE_DIRENT|null            12*#Get next directory entry or null if no more
 FSDIR.close()->PROMISE                       12*#Cleanup file descriptor after iteration done
