no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -8,7 +8,7 @@
 ALTERNATIVES ==>                  #  - ESTree (def): most supported
                                   #  - Shift: less supported
 
-VERSION ==>                       #Last check 04/04/2020
+VERSION ==>                       #Last check 30/05/2020
                                   #JavaScript AST standard
 
 TYPESCRIPT/FLOW ==>               #See TSESTree doc
@@ -248,6 +248,9 @@ new FUNC(...)                     #Child of EXPR, type 'NewExpression':
 
 ?                            (bl)*#Type 'ArgumentPlaceholder'
 
+do { ... }                     (b)#Child of EXPR, type 'DoExpression':
+                               (b)#  - body BLOCK_STATEMENT
+
 
 
                                              /=+===============================+=\
@@ -339,14 +342,18 @@ debugger                          #Child of STATEMENT, type 'DebuggerStatement'
 
 
 STR|BOOL|NUM|BIGINT|null|REGEXP  b#Child of EXPR, type 'Literal':
+ |BIGDECIMAL                   (b)#
                                  b#  - value STR|BOOL|NUM|null|REGEXP
                                 sb#    or BIGINT
+                               (b)#    or BIGDECIMAL
                                  b#  (REGEXP only)
                                  b#  - regex:
                                  b#     - pattern STR
                                  b#     - flags STR
                                sbl#  (BIGINT only)
                                sbl#  - bigint STR (without 'n')
+                               (b)#  (BIGDECIMAL only)
+                               (b)#  - decimal STR
                               (b)##Type 'String|Boolean|Numeric|Null|RegExpLiteral':
                               (b)##  - value STR|BOOL|NUM|null|REGEXP|BIGINT
                               (b)##  (not BOOL|null)
@@ -416,6 +423,7 @@ VAL == != === !== < <= > >= <<    #Child of EXPR, type 'BinaryExpression':
 instanceof VAL2                   #
 VAL |> VAL2                  (bl)*#    or '|>'
                                   #  - left EXPR
+                               (b)#    or PRIVATE_NAME (operator 'in' only)
                                   #  - right EXPR
 
 VAR = += -= *= /= **= %= <<= >>=  #Child of EXPR, type 'AssignmentExpression':
