no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -342,18 +342,18 @@ debugger                          #Child of STATEMENT, type 'DebuggerStatement'
 
 
 STR|BOOL|NUM|BIGINT|null|REGEXP  b#Child of EXPR, type 'Literal':
- |BIGDECIMAL                   (b)#
+ |BIGDECIMAL                     b#
                                  b#  - value STR|BOOL|NUM|null|REGEXP
-                                sb#    or BIGINT
-                               (b)#    or BIGDECIMAL
+                               sbt#    or BIGINT
+                                ()#    or BIGDECIMAL
                                  b#  (REGEXP only)
                                  b#  - regex:
                                  b#     - pattern STR
                                  b#     - flags STR
                                sbl#  (BIGINT only)
                                sbl#  - bigint STR (without 'n')
-                               (b)#  (BIGDECIMAL only)
-                               (b)#  - decimal STR
+                                ()#  (BIGDECIMAL only)
+                                ()#  - decimal STR
                               (b)##Type 'String|Boolean|Numeric|Null|RegExpLiteral':
                               (b)##  - value STR|BOOL|NUM|null|REGEXP|BIGINT
                               (b)##  (not BOOL|null)
