--- a/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
@@ -139,7 +139,7 @@ BIGINT                           b#Same
 
 
 { VAR?[: TYPE],... }
-{ [T in TYPE][+|-]?: TYPE2 }      #On IDENTIFIER|TS_PROPERTY_SIGNATURE|TS_MAPPED_TYPE|TS_METHOD_SIGNATURE|TS_DECLARE_METHOD:
+{ [T in TYPE][+|-]?: TYPE2 }      #On IDENTIFIER|TS_PROPERTY_SIGNATURE|TS_MAPPED_TYPE|TS_METHOD_SIGNATURE|TS_DECLARE_METHOD|TS_METHOD_SIGNATURE:
 (VAR?[: TYPE],...) => TYPE2       #  - [optional BOOL|'+'|'-']
 
 [TYPE?,...]                       #Child of TS_TYPE, type 'TSOptionalType':
@@ -404,9 +404,11 @@ declare module ...                #TS_INTERFACE_DECLARATION|TS_MODULE_DECLARATIO
 declare global ...                #  - [declare BOOL]
 
 declare [async] function FUNC()   #Child of DECLARATION, type 'TSDeclareFunction'. Like FUNCTION_DECLARATION except no body
+                                  #'FunctionExpression' -> 'TSEmptyBodyFunctionExpression'
 
 class ... { FUNC() }            bl#METHOD_DEFINITION with no body
                              (bl)##Type 'TSDeclareMethod'. Like CLASS_METHOD except no body
+                                  #'FunctionExpression' -> 'TSEmptyBodyFunctionExpression'
 
 
                                              /=+===============================+=\
