no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.0.0
+VERSION ==>                       #7.1.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1627,6 +1627,7 @@ radix [STR]                       #With parseInt(..., RADIX):
                                   #  - STR 'always' (def): require RADIX
                                   #  - STR 'as-needed': forbid RADIX if 10
 prefer-number-properties          #Use 'Number.' in front of parseInt|parseFloat|isNaN|isFinite|NaN
+no-loss-of-precision              #Avoid very large integer, or very large fractional part, which are lost in DOUBLE float precision
 
 use-isnan [OBJ]                   #Must test NaN with [Number.]isNaN()
                                   #OBJ:
@@ -1963,7 +1964,7 @@ node/shebang [OBJ]               ##Make sure binaries specified in package.json 
 compat/compat                    ##Avoid features unsupported by browsers, using current browserslist conf (see its doc)
                                  ##Can whitelist some features with CONF.settings.polyfills 'FEATURE_NAME'_ARR
                                  ##(see caniuse for what is "FEATURE_NAME").
-                                 ##Node module 'eslint-plugin-compat' (3.6.0-0)
+                                 ##Node module 'eslint-plugin-compat' (3.8.0-0)
 
 node/no-unsupported-features/TYPE##No JavaScript features unsupported for a given Node.js version
  [OBJ]                           ##OBJ:
