no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -501,7 +501,7 @@ unicorn/expiring-todo-comments   ##Avoid comments like TODO|FIXME unless they ar
                                  ##  - ignoreDatesOnPullRequests BOOL (def: false): disable YYYY-MM-DD when it's a PR
                                  ##  - ignore STR|REGEXP_ARR
 
-eslint-comments/*                ##Module "eslint-plugin-eslint-comments" (3.1.2)
+eslint-comments/*                ##Module "eslint-plugin-eslint-comments" (3.2.0)
 eslint-comments/                 ##Every /* eslint-disable */ must be followed by a /* eslint-enable */
  disable-enable-pair [OBJ]       ##OBJ: allowWholeFile BOOL
 eslint-comments/no-unused-enable ##Every /* eslint-enable */ must be after a  /* eslint-disable */
@@ -517,6 +517,9 @@ eslint-comments/
 eslint-comments/no-use [OBJ]     ##Forbids all ESLint comments
                                  ##OBJ: allow STR_ARR, among 'eslint', 'eslint-disable|enable', 'eslint-disable-[next-]line',
                                  ##'eslint-env', 'exported', 'global[s]'
+eslint-comments/                 ##Require a comment before /* eslint-* */
+ require-description [OBJ]       ##OBJ:
+                                 ##  - ignore STR_ARR: same values as eslint-comments/no-use OBJ.allow
 eslint-comments/no-unused-disable##No /* eslint-disable */ if no rule is broken
 eslint --report-unused-disable
  -directives
@@ -1274,6 +1277,8 @@ unicorn/catch-error-name [OBJ]   ##Catch clause variable name must be called OBJ
                                  ##  - ignore STR|REGEXP[_ARR] (def: none)
 no-ex-assign                      #Avoid assigning to ERROR in catch clause
 no-useless-catch                  #Avoid catch clause that only rethrows ERROR
+unicorn/
+ prefer-optional-catch-binding   ##Avoid `catch` if ERROR not used
 no-unsafe-finally                 #Avoid return|throw|break|continue in finally clauses.
                                   #The reason: it overrides the try|catch clause's return|throw|break|continue
 
@@ -1527,11 +1532,14 @@ comma-dangle [STR] [OBJ]          #Trailing commas
 
 no-sparse-arrays                  #Avoid sparse arrays
 
-array-callback-return [OBJ]       #[TYPED_]ARR.from|every|some|filter|find[Index]|forEach|[flat]map|reduce[Right]|sort() must
+array-callback-return [OBJ]       #[TYPED_]ARR.from|every|some|filter|find[Index]|[flat]map|reduce[Right]|sort() must
                                   #have a return statement
-                                  #OBJ: allowImplicit BOOL: if false (def), forbid "return" with no VAL
+                                  #OBJ:
+                                  #  - allowImplicit BOOL: if false (def), forbid "return" with no VAL
+                                  #  - checkForEach BOOL: if true (def: false), forbid "return" in [TYPED_]ARR.forEach
 unicorn/prefer-includes          ##Prefer ARR|STR.includes() over ARR|STR.indexOf()
 unicorn/prefer-flat-map          ##Prefer ARR.flatMap() over ARR.map().flat()
+unicorn/no-reduce                ##Prefer ARR.map|filter() over ARR.reduce()
 unicorn/prefer-negative-index    ##Prefer ARR|STR|TYPED_ARR.slice|splice(-NUM, ...) instead of slice|splice(ARR|STR|TYPED_ARR.length - NUM, ...)
 
 no-array-constructor              #Avoids [new] Array(VAL,...)
@@ -1557,7 +1565,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (19.0.1)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (20.1.0)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 unicorn/prefer-trim-start-end    ##Prefer STR.trimStart|End() over STR.trimLeft|Right()
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
@@ -2081,6 +2089,7 @@ unicorn/no-null [OBJ]            ##Avoid null
 fp/no-nil                        ##Avoid null|undefined, except in comparison
                                  ##Avoid VARs initialized to null|undefined
                                  ##Avoid FUNCs that return null|undefined (including no return statement)
+unicorn/no-useless-undefined     ##Avoid undefined if could just be omitted
 
 no-void [OBJ]                     #Avoid void VAL
                                   #OBJ:
