no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -3451,7 +3451,7 @@ format(STR[, STR2...])                          #Printf-like FUNC, STR can conta
                                                 #  - "%s": STR
                                                 #  - "%d", "%i": INT|BIGINT
                                                 #  - "%f": FLOAT
-                                                #  - "%j": JSON. Prints '[Circular]' on circular references. Handles toJSON()
+                                                #  - "%j": JSON. Returns '[Circular]' (on the whole return value) if any circular references. Handles toJSON()
                                                 #  - "%O": OBJ. Uses UTIL.inspect() with default options
                                                 #  - "%o": OBJ. Uses UTIL.inspect() with options: showHidden true, depth 4, showProxy true
                                       11.0-11.3*#    depth 20
