no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -161,8 +161,8 @@ OBJ[VAL]                          #  - object EXPR|SUPER (OBJ)
                                   #  - property EXPR (VAL) or IDENTIFIER (VAR)
                               set|#    or PRIVATE_NAME (#VAR)
                                   #  - computed true (VAL) or false (VAR)
-OBJ?.VAR                  seatmbl|#On MEMBER_EXPRESSION:
-OBJ?.[VAL]                seatmbl|#  - optional BOOL
+OBJ?.VAR                   setmbl|#On MEMBER_EXPRESSION:
+OBJ?.[VAL]                 setmbl|#  - optional BOOL
                             (blt)##Child of MEMBER_EXPRESSION, type 'OptionalMemberExpression'
                             (blt)##  - optional BOOL
                               (m)##Child of EXPR, type 'OptionalExpression'
@@ -227,7 +227,7 @@ FUNC(...)                         #Child of EXPR, type 'CallExpression':
                                   #  - callee EXPR|SUPER|IMPORT (FUNC)
                                   #  - arguments ARR of EXPR|SPREAD_ELEMENT
                              (bl)*#    or ARGUMENT_PLACEHOLDER
-                          seatmbl|#  - optional BOOL (FUNC?.(...))
+                           setmbl|#  - optional BOOL (FUNC?.(...))
                             (blt)##Child of CALL_EXPRESSION, type 'OptionalCallExpression'
                             (blt)##  - optional BOOL (FUNC?.(...))
                               (m)##Type 'OptionalExpression' (see above)
