--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -39,7 +39,7 @@ ALTERNATIVES ==>                  #  - esprima:
                                   #  - cherow: not maintained
                                   #  - esprit: not maintained
 
-VERSION ==>                       #7.2.0 (acorn), 6.1.0 (acorn-loose), 6.2.0 (acorn-walker)
+VERSION ==>                       #7.3.1 (acorn), 6.1.0 (acorn-loose), 6.2.0 (acorn-walker)
                                   #Browser, Node.js or CLI
                                   #JavaScript parser and tokenizer
 
@@ -184,33 +184,26 @@ ACORN.Parser                      #PARSER. Same as ACORN, except with additional
 PARSER.acorn                      #ACORN
 PARSER.extend(PLUGIN...)          #
 
-ACORN-STAGE3                     ##PLUGIN bundling the following PLUGINs: bigint, class-fields, private-class-*,
-                                 ##static-class-features, dynamic-import, import-meta, numeric-separator, logical-assignment
-                                 ##Version 2.1.0
-
-ACORN-BIGINT                     ##PLUGIN for BIGINT
-                                 ##Version 0.4.0
+ACORN-STAGE3                     ##PLUGIN bundling the following PLUGINs: class-fields, private-class-*,
+                                 ##static-class-features, numeric-separator, logical-assignment
+                                 ##Version 3.0.0
 
 ACORN-CLASS-FIELDS               ##PLUGIN for class { VAR [= VAL] }
-                                 ##Version 0.3.4
+                                 ##Version 0.3.6
 ACORN-PRIVATE-CLASS-ELEMENTS     ##PLUGIN for class { #VAR }
                                  ##New token type: privateName
-                                 ##Version 0.2.5
+                                 ##Version 0.2.6
 ACORN-PRIVATE-METHODS            ##PLUGIN for class { #FUNC() }
                                  ##New token type: privateName
-                                 ##Version 0.3.1
+                                 ##Version 0.3.2
 ACORN-STATIC-CLASS-FEATURES      ##PLUGIN for class { static VAR [= VAL] }
-                                 ##Version 0.2.2
-
-ACORN-DYNAMIC-IMPORT             ##PLUGIN for import()
-                                 ##Different syntax than ESTree: type 'Import'
-                                 ##Version 4.0.0
+                                 ##Version 0.2.3
 
 ACORN-NUMERIC-SEPARATOR          ##PLUGIN for NUM_NUM_NUM
-                                 ##Version 0.3.2
+                                 ##Version 0.3.3
 
 ACORN-LOGICAL-ASSIGNMENT         ##PLUGIN for ||= &&= ??=
-                                 ##Version 0.1.0
+                                 ##Version 0.1.3
 
 ACORN-JSX()                      ##PLUGIN for JSX (see JSX AST doc)
                                  ##New token types: jsxName, jsxText, jsxTagStart, jsxTagEnd
