no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -428,13 +428,13 @@ VAL |> VAL2                  (bl)*#    or '|>'
 
 VAR = += -= *= /= **= %= <<= >>=  #Child of EXPR, type 'AssignmentExpression':
 >>>= |= ^= &= VAL                 #  - operator '=|+=|-=|*=|/=|**=|%=|<<=|>>=|>>>=||=|^=|&='
-VAR &&= ||= ??= VAL           (bl)#    or '&&=|||=|??='
+VAR &&= ||= ??= VAL         (aebl)#    or '&&=|||=|??='
                                   #  - left PATTERN or (only on older JavaScript engines) EXPR
                                   #  - right EXPR
 
 VAL || && VAL2                    #Child of EXPR, type 'LogicalExpression':
                                   #  - operator '|||&&'
-VAL ?? VAL2                   (bl)#   or '??'
+VAL ?? VAL2                 (aebl)#   or '??'
                                   #  - left EXPR
                                   #  - right EXPR
 
@@ -486,7 +486,7 @@ class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 new.target                        #Child of EXPR, type 'MetaProperty':
                                   #  - meta IDENTIFIER
                                   #  - property IDENTIFIER
-import.meta                     se#Same
+import.meta                  (aes)#Same
 function.sent                (bl)*#Same
 
 this                              #Child of EXPR, type 'ThisExpression'
@@ -523,8 +523,8 @@ export default VAL                #Child of MODULE_DECLARATION, type 'ExportDefa
 export * [as VAR] from "MDL"      #Child of MODULE_DECLARATION, type 'ExportAllDeclaration':
                                   #  - source LITERAL ("MDL")
                                   #  - [exported IDENTIFIER] (VAR)
-export * as VAR from "MDL"  (aml)##Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
-                            (aml)##  - no local
+export * as VAR from "MDL" (aeml)##Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
+                           (aeml)##  - no local
                               (m)##  - exported -> specifier
 export VAL from "MDL"        (bl)##Child of EXPORT_SPECIFIER, type 'ExportDefaultSpecifier':
                              (bl)##  - no local
