no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.1.0
+VERSION ==>                       #7.3.1
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -837,6 +837,8 @@ chai-friendly/                   ##Same but works with Chai properties.
  no-unused-expressions [OBJ]     ##Module eslint-plugin-chai-friendly (0.6.0)
 no-new                            #Avoid new TYPE as a single statement (e.g. no assignment)
 no-unreachable                    #Avoid statements that cannot be reached because of an early return|throw|break|continue
+no-unreachable-loop [TYPE_ARR]    #Avoid loops that never iterates more than once
+                                  #TYPE_ARR are types to ignore, among '[Do]WhileStatement|For[In|Of]Statement'
 
 
                                              /=+===============================+=\
@@ -857,6 +859,7 @@ no-extra-parens [STR] [OBJ]       #Avoid unnecessary parentheses
                                   #  - enforceForArrowConditionals BOOL (ignore around (...) => ?:)
                                   #  - enforceForSequenceExpressions BOOL (ignore around ..., ...)
                                   #  - enforceForNewInMemberExpressions BOOL (ignore around new ...)
+                                  #  - enforceForFunctionPrototypeMethods BOOL (ignore around function (){}.call|apply())
 no-mixed-operators [OBJ]          #Must add extra (even useless) parenthesis around operators to clarity order,
                                   #when using several operators.
                                   #OBJ:
@@ -1676,6 +1679,7 @@ node/no-callback-literal         ##FUNC called 'cb|callback' first argument must
 
 prefer-promise-reject-errors [OBJ]#Must pass ERROR to Promise.reject()
                                   #OBJ: allowEmptyReject BOOL (def: false): also allow undefined
+no-promise-executor-return        #Do not return from new Promise() FUNC
 require-await                     #Avoid async functions with no await
 no-await-in-loop                  #await inside loops (prefer Promise.all())
 no-return-await                   #Avoid return await VAL (it does same as return VAL)
@@ -1721,7 +1725,7 @@ node/prefer-dns/fs               ##Use DNS.promises.* instead of DNS.*
                                              \=+===============================+=/
 
 
-import/*                         ##Node module "eslint-plugin-import" (2.20.2)
+import/*                         ##Node module "eslint-plugin-import" (2.22.0)
                                  ##Most seem to work for both require() and import|export,
                                  ##although mostly targeting import|export
                                  ##Uses the following CONF.settings:
@@ -1836,7 +1840,8 @@ import/no-cycle [OBJ]            ##Must not import|require circular dependencies
                                  ##  - commonjs|amd BOOL (def: false):
                                  ##     - also check require() and AMD define|require()
                                  ##     - but actually mostly work for ES modules
-                                 ##  - maxDepth NUM (def: Infinity)
+                                 ##  - maxDepth NUM (def: '∞')
+                                 ##  - ignoreExternal BOOL (def: false): does not check require('MODULE/PATH')
 import/group-exports             ##Must use a single export|module.exports declaration
 
 import/no-extraneous-dependencies##Avoid import|require of external dependencies not declared in package.json's
@@ -1914,7 +1919,7 @@ import/no-webpack-loader-syntax  ##Avoid import|require using Webpack loader syn
 
 import/no-restricted-paths [OBJ] ##Blacklists import|require of any file inside some DIR when inside some specific DIR2
                                  ##OBJ:
-                                 ##  - zones OBJ_ARR: target DIR2, from DIR, except DIR_ARR
+                                 ##  - zones OBJ_ARR: target DIR2, from DIR, except DIR_ARR, message STR
                                  ##  - basePath DIR3 (def: $PWD): of DIR2|DIR
 
 unicorn/import-index [OBJ]       ##Avoid import|require of index.js with './index.js' or 'DIR/'. Prefer 'DIR'
@@ -1972,7 +1977,7 @@ node/shebang [OBJ]               ##Make sure binaries specified in package.json 
 compat/compat                    ##Avoid features unsupported by browsers, using current browserslist conf (see its doc)
                                  ##Can whitelist some features with CONF.settings.polyfills 'FEATURE_NAME'_ARR
                                  ##(see caniuse for what is "FEATURE_NAME").
-                                 ##Node module 'eslint-plugin-compat' (3.8.0-1)
+                                 ##Node module 'eslint-plugin-compat' (3.8.0)
 
 node/no-unsupported-features/TYPE##No JavaScript features unsupported for a given Node.js version
  [OBJ]                           ##OBJ:
