no commit message

--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -612,7 +612,7 @@ TESTUTILS.Simulate.EVENT         ##Trigger EVENT, but still work with virtual DO
                                              \=+===============================+=/
 
 
-react/*                          ##Node module "eslint-plugin-react" (7.19.0)
+react/*                          ##Node module "eslint-plugin-react" (7.20.2)
                                  ##Can use CONF.settings.react:
                                  ##  - createClass 'FUNC' (def: 'createReactClass'): used to create RTYPE
                                  ##    when not using ES6 classes
@@ -637,7 +637,7 @@ react/forbid-elements [OBJ]      ##Avoid using <RTYPE>, using OBJ.forbid OBJ_ARR
 react/react-in-jsx-scope         ##React variable must be defined if there is some JSX
 react/require-render-return      ##Must return a value in render()
 react/forbid-component-          ##Avoid passing OBJ.forbid VAL_ARR (def: 'className', 'style') as props (except to HTML tags)
- props [OBJ]                     ##VAL can be STR or OBJ: propName STR, allowedFor 'RTYPE'_ARR
+ props [OBJ]                     ##VAL can be STR or OBJ: propName STR, allowedFor 'RTYPE'_ARR, message STR
 react/forbid-dom-props [OBJ]     ##Same for HTML tags
 react/style-prop-object [OBJ]    ##PROP 'style' must be an OBJ
                                  ##OBJ:
@@ -895,6 +895,7 @@ react/jsx-no-literals [OBJ]      ##Requires <...>{'STR'}</...> instead of <..
                                  ##OBJ:
                                  ##  - noStrings BOOL (def: false): forbids any literal STR in JSX, even outside {}
                                  ##  - allowedStrings STR_ARR
+                                 ##  - ignoreProps BOOL (def: false): ignore inside props
 react/jsx-curly-brace-presence   ##Whether {} should be required ("always"), never allowed unless necessary ("never") or
  [OBJ]                           ##"ignore"
                                  ##Using OBJ: props STR, children STR
