no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -161,10 +161,12 @@ OBJ[VAL]                          #  - object EXPR|SUPER (OBJ)
                                   #  - property EXPR (VAL) or IDENTIFIER (VAR)
                               set|#    or PRIVATE_NAME (#VAR)
                                   #  - computed true (VAL) or false (VAR)
-OBJ?.VAR                   setmbl|#On MEMBER_EXPRESSION:
-OBJ?.[VAL]                 setmbl|#  - optional BOOL
+OBJ?.VAR                    setmbl#On MEMBER_EXPRESSION:
+OBJ?.[VAL]                  setmbl#  - optional BOOL
                             (blt)##Child of MEMBER_EXPRESSION, type 'OptionalMemberExpression'
                             (blt)##  - optional BOOL
+                                 ##Child of EXPR, type 'ChainExpression'
+                                 ##  - expression MEMBER_EXPRESSION|CALL_EXPRESSION:
                               (m)##Child of EXPR, type 'OptionalExpression'
                               (m)##  - object EXPR
                               (m)##  - chain OPTIONAL_CHAIN (type 'OptionalChain'):
